// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`License prompt renders a prompt with a link to License Management 1`] = `
<_EuiPageEmptyPrompt
  actions={
    Array [
      <EuiLink
        href="/license_management"
      >
        <FormattedMessage
          defaultMessage="Manage your license"
          id="xpack.watcher.app.licenseErrorLinkText"
          values={Object {}}
        />
      </EuiLink>,
    ]
  }
  body={
    <p>
      License error
    </p>
  }
  color="danger"
  iconType="warning"
  title={
    <h1>
      <FormattedMessage
        defaultMessage="License error"
        id="xpack.watcher.app.licenseErrorTitle"
        values={Object {}}
      />
    </h1>
  }
/>
`;

exports[`License prompt renders a prompt without a link to License Management 1`] = `
<_EuiPageEmptyPrompt
  actions={
    Array [
      undefined,
    ]
  }
  body={
    <React.Fragment>
      <p>
        License error
      </p>
      <p>
        <FormattedMessage
          defaultMessage="Contact your administrator to change your license."
          id="xpack.watcher.app.licenseErrorBody"
          values={Object {}}
        />
      </p>
    </React.Fragment>
  }
  color="danger"
  iconType="warning"
  title={
    <h1>
      <FormattedMessage
        defaultMessage="License error"
        id="xpack.watcher.app.licenseErrorTitle"
        values={Object {}}
      />
    </h1>
  }
/>
`;
